# ssp-tools

./: .gitignore  README.md  dump_tables.sh  environment.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
analysis/: analysis.ipynb  daily-data-products-pipeline.ipynb  go.py  qa_phot.py
ddpp/: ephem.py  flags.py  moid.py  photfit.py  schema.py  ssobject.py  sssource.py
ddpp/export/: __init__.py  butler.py  postgres.py  table.py
examples/: dump_tables.sh  exports.json  exports.yaml  pg_service.conf  test_batch_export.sh
ssp/: ephem.py  flags.py  photfit.py  schema.py  ssobject.py  sssource.py  util.py
ssp/export/: __init__.py  butler.py  postgres.py
tests/: test_types_and_rowgroup.py
