[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssp"
version = "0.1.0"
description = "LSST Daily Data Products Pipeline - Streaming export of Postgres tables to Parquet via Arrow"
authors = [
  { name = "LSST DDP Team" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "psycopg2-binary>=2.9",
  "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
fast-export = "ssp.export:main"
extract-catalog = "ssp.export.butler:main"

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py", "tests/test_*.py"]

[tool.setuptools]
packages = ["ssp", "ssp.export"]
