[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssp"
version = "0.1.0"
description = "LSST Daily Data Products Pipeline - Streaming export of Postgres tables to Parquet via Arrow"
authors = [
  { name = "LSST DDP Team" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "psycopg2-binary>=2.9",
  "pyarrow>=14",
  "pandas>=1.5",
  "numpy>=1.21",
  "astropy>=5.0",
  "scipy>=1.7",
  "pyyaml>=6.0",
  "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
all = [
  "jorbit",
]

[project.scripts]
fast-export = "ssp.export:main"
extract-catalog = "ssp.export.butler:main"
ssp-build-ssobject = "ssp.ssobject:main"
ssp-generate-dtypes = "ssp.felis:main"

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py", "tests/test_*.py"]

[tool.setuptools]
packages = ["ssp", "ssp.export"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    "__init__.py",
    "analysis",
]

[tool.ruff.lint]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N813",
    "N815",
    "N816",
    "N999",
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # pep8-naming
    "W",  # pycodestyle
]
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"
